# nether-pathfinder

./: .gitignore  .gitmodules  CMakeLists.txt  ChunkGeneratorHell.cpp  ChunkGeneratorHell.h  ChunkPrimer.h  NoiseGeneratorImproved.cpp  NoiseGeneratorImproved.h  NoiseGeneratorOctaves.cpp  NoiseGeneratorOctaves.h  ParallelExecutor.h  PathFinder.cpp  PathNode.h  README.md  Random.cpp  Random.h  SimpleThreadPool.h  Utils.h  default.nix  flake.nix  gbenchmark.patch  main.cpp  release.nix
.github/actions/: build-deps.yml
.github/actions/build-deps/: action.yml
.github/actions/git-setup/: action.yml
.github/workflows/: gradle-build.yml  gradle-publish.yml  test.yml
java/: .envrc  build.gradle  multiplat_build.sh  settings.gradle  zigcxx.sh  zigranlib.sh
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/dev/babbaj/pathfinder/: Buffer.java  NetherPathfinder.java  Octree.java  PathSegment.java
src/: Allocator.cpp  Allocator.h  BinaryHeapOpenSet.h  Chunk.h  ChunkGen.h  ChunkGeneratorHell.cpp  ChunkGeneratorHell.h  ChunkPrimer.h  ChunkSlice.h  LavaPathFinder.cpp  NoiseGeneratorImproved.cpp  NoiseGeneratorImproved.h  NoiseGeneratorOctaves.cpp  NoiseGeneratorOctaves.h  ParallelExecutor.h  PathFinder.cpp  PathFinder.h  PathNode.h  PathfinderJNI.cpp  Random.h  Refiner.cpp  Refiner.h  Region.cpp  Region.h  Utils.h  baritone.cpp  baritone.h  baritone_pather.cpp  benchmark_main.cpp  main.cpp  main.go  refiner.go  util.go
